# nba-db-and-analysis

./: Makefile  pyproject.toml
.dvc/: config
data/processed/: .gitignore  nba.duckdb.dvc
data/raw/: .gitignore  tb_game_logs.dvc  tb_teams.dvc
nba_db_and_analysis/db/: __init__.py  create_database.py  data_funcs.py  scripts.py  utils.py
nba_db_and_analysis/db/players/: tb_boxscore.py  tb_boxscore_advanced.py
nba_db_and_analysis/db/teams/: tb_advanced_stats.py  tb_boxscore_advanced.py  tb_game_logs.py  tb_teams.py
notebooks/: balanced_stats_nba.ipynb  player_points_analysis.ipynb
